[package]
name = "gfainject"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
noodles = { version = "0.31.0", features = ["sam", "bam", "core"] }
flate2 = "1.1.5"
roaring = "0.11.2"
gbam_tools = { git = "https://github.com/NickRoz1/gbam", rev = "eaf0b59157cb9f52ebf28008b9a055247fe0c789" }
itertools = "0.14.0"
console = { version = "0.16", features = ["std"] }
